data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1909.wast
;; 10. **Test with Zero Operand Stack**:    Conduct a `br_table` test in an execution context where the operand stack has zero elements just before the instruction, checking whether both implementations can handle unwound operand stacks without access errors.

(assert_invalid
  (module
    (func $zero-operand-stack
      (block
        (br_if 0)
      )
    )
  )
  "type mismatch"
)